--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.0",
+    "vite-plugin-dts": "^4.5.3"
   },
   "workspaces": [
     "apps/*"
