--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -21,11 +21,11 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "react-day-picker": "8.10.1",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4",
-    "tw-animate-css": "^1.2.5"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1"
+    "@types/node": "^22.14.1",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.5"
   }
 }
