--- a/apps/agentic-chat/tsconfig.spec.json
+++ b/apps/agentic-chat/tsconfig.spec.json
@@ -9,7 +9,8 @@
       "node",
       "vitest",
       "@nx/react/typings/cssmodule.d.ts",
-      "@nx/react/typings/image.d.ts"
+      "@nx/react/typings/image.d.ts",
+      "jsdom"
     ],
     "jsx": "react-jsx"
   },
