--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -51,8 +52,8 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "^4.5.3",
+    "vitest": "^3.0.0"
   },
   "workspaces": [
     "apps/*"
