--- a/apps/eliza/package.json
+++ b/apps/eliza/package.json
@@ -28,7 +28,8 @@
     "@elizaos/plugin-openai": "1.0.0-beta.34",
     "@elizaos/plugin-sql": "1.0.0-beta.34",
     "@elizaos/plugin-venice": "1.0.0-beta.28",
-    "zod": "3.24.2"
+    "zod": "3.24.2",
+    "@langchain/core": "0.3.47"
   },
   "devDependencies": {
     "tsup": "8.4.0",
