--- a/apps/eliza/package.json
+++ b/apps/eliza/package.json
@@ -29,7 +29,12 @@
     "@elizaos/plugin-sql": "1.0.0-beta.34",
     "@elizaos/plugin-venice": "1.0.0-beta.28",
     "zod": "3.24.2",
-    "@langchain/core": "0.3.47"
+    "@langchain/core": "0.3.47",
+    "@electric-sql/pglite": "^0.2.17",
+    "@types/pg": "8.11.10",
+    "drizzle-kit": "^0.30.4",
+    "drizzle-orm": "^0.39.1",
+    "pg": "^8.13.3"
   },
   "devDependencies": {
     "tsup": "8.4.0",
