--- a/apps/eliza/package.json
+++ b/apps/eliza/package.json
@@ -2,6 +2,9 @@
   "name": "shapeshift-eliza",
   "description": "Project starter for elizaOS",
   "version": "1.0.0-beta.33",
+  "engines": {
+    "node": "22.x"
+  },
   "type": "module",
   "private": true,
   "main": "dist/index.js",
