--- a/apps/eliza/package.json
+++ b/apps/eliza/package.json
@@ -3,7 +3,7 @@
   "description": "Project starter for elizaOS",
   "version": "1.0.0-beta.33",
   "engines": {
-    "node": "23.x"
+    "node": "23.3.0"
   },
   "type": "module",
   "private": true,
@@ -23,7 +23,6 @@
     "dist"
   ],
   "dependencies": {
-    "@electric-sql/pglite": "^0.2.17",
     "@elizaos/cli": "1.0.0-beta.34",
     "@elizaos/core": "1.0.0-beta.34",
     "@elizaos/plugin-anthropic": "1.0.0-beta.34",
