feat: exclude eliza from e2e

--- a/nx.json
+++ b/nx.json
@@ -74,6 +74,12 @@
       "dependsOn": ["^build"]
     }
   },
+  "exclude": [
+    {
+      "projects": ["eliza"],
+      "targets": ["e2e"]
+    }
+  ],
   "generators": {
     "@nx/react": {
       "application": {
