--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,5 @@ jobs:
       # - run: yarn nx-cloud record -- echo Hello World
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
       # When you enable task distribution, run the e2e-ci task instead of e2e
-      - run: yarn nx affected -t lint test build e2e
+      # Note, we exclude eliza here, as it doesn't have playwright support and uses bun as a package manager instead which doesn't play nicely with nx
+      - run: yarn nx affected -t lint test build e2e --exclude eliza
