--- a/apps/langchain/package.json
+++ b/apps/langchain/package.json
@@ -26,6 +26,7 @@
     "@langchain/openai": "^0.5.7",
     "@langchain/langgraph-checkpoint": "^0.0.17",
     "axios": "^1.6.7",
+    "bignumber.js": "^9.1.2",
     "qs": "^6.11.2",
     "viem": "^2.7.15",
     "zod": "^3.22.4"
