--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -6,6 +6,9 @@
     "name": "agentic-chat"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.37",
+    "@langchain/langgraph": "^0.2.43",
+    "@langchain/openai": "^0.5.7",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -21,11 +24,25 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "react-day-picker": "8.10.1",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "bignumber.js": "^9.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "viem": "^2.7.9"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "tailwindcss": "^4.1.4",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0"
   }
 }
