--- a/apps/agentic-chat/tsconfig.json
+++ b/apps/agentic-chat/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../tools"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
