--- a/apps/langchain/tsconfig.json
+++ b/apps/langchain/tsconfig.json
@@ -21,5 +21,10 @@
     "resolveJsonModule": true
   },
   "include": ["**/*.ts", "**/*.js"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    {
+      "path": "../../utils"
+    }
+  ]
 }
