--- a/tools/tsconfig.lib.json
+++ b/tools/tsconfig.lib.json
@@ -13,5 +13,9 @@
     "types": ["node"]
   },
   "include": ["src/**/*.ts"],
-  "references": []
+  "references": [
+    {
+      "path": "../utils/tsconfig.lib.json"
+    }
+  ]
 }
