--- a/apps/langchain/package.json
+++ b/apps/langchain/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
+    "dev": "npx @langchain/langgraph-cli dev",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=\\.test\\.ts$ --testPathIgnorePatterns=\\.int\\.test\\.ts$",
     "test:int": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=\\.int\\.test\\.ts$",
     "format": "prettier --write .",
