--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -26,8 +26,9 @@
     "react-day-picker": "8.10.1",
     "tailwind-merge": "^3.2.0",
     "bignumber.js": "^9.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "6.29.0",
     "viem": "^2.7.9"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.5",
+    "react-router-dom": "6.29.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
