--- a/apps/langchain/.github/workflows/integration-tests.yml
+++ b/apps/langchain/.github/workflows/integration-tests.yml
@@ -4,7 +4,7 @@ name: Integration Tests
 
 on:
   schedule:
-    - cron: "37 14 * * *" # Run at 7:37 AM Pacific Time (14:37 UTC) every day
+    - cron: '37 14 * * *' # Run at 7:37 AM Pacific Time (14:37 UTC) every day
   workflow_dispatch: # Allows triggering the workflow manually in GitHub UI
 
 # If another scheduled run starts while this workflow is still running,
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+          cache: 'yarn'
       - name: Install dependencies
         run: yarn install --immutable
       - name: Build project
