--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -34,7 +34,8 @@
   "devDependencies": {
     "@types/node": "^22.14.1",
     "eslint": "^9.25.1",
-    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.5",
     "typescript": "^5.7.2",
