--- a/apps/langchain/tsconfig.json
+++ b/apps/langchain/tsconfig.json
@@ -24,6 +24,9 @@
   "exclude": ["node_modules", "dist"],
   "references": [
     {
+      "path": "../../utils"
+    },
+    {
       "path": "../../tools"
     }
   ]
