--- a/apps/agentic-chat/tsconfig.app.json
+++ b/apps/agentic-chat/tsconfig.app.json
@@ -39,6 +39,9 @@
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
   "references": [
     {
+      "path": "../../utils/tsconfig.lib.json"
+    },
+    {
       "path": "../../tools/tsconfig.lib.json"
     }
   ]
