--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -29,6 +29,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0",
+    "@shapeshiftoss/caip": "8.15.0",
     "@tanstack/react-query": "^5.75.5",
     "viem": "^2.7.9",
     "wagmi": "^2.15.2"
