feat: prefix example with VITE

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=sk-proj-
-VENICE_API_KEY=unused for now, maybe laters?
-PORTALS_BASE_URL=https://api.portals.fi
-PORTALS_API_KEY=copy me from web
+VITE_OPENAI_API_KEY=sk-proj-
+VITE_VENICE_API_KEY=unused for now, maybe laters?
+VITE_PORTALS_BASE_URL=https://api.portals.fi
+VITE_PORTALS_API_KEY=copy me from web
