--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ VITE_OPENAI_API_KEY=sk-proj-
 VITE_PORTALS_BASE_URL=https://api.portals.fi
 VITE_PORTALS_API_KEY=copy me from web
 VITE_BEBOP_API_KEY=request me
+VITE_EVM_MNM=todo
