--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.55",
     "@langchain/langgraph": "^0.2.69",
+    "@langchain/langgraph-sdk": "^0.0.74",
     "@langchain/openai": "^0.5.10",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
@@ -28,6 +29,7 @@
     "bignumber.js": "^9.1.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-markdown": "10.1.0",
     "react-router-dom": "6.29.0",
     "@shapeshiftoss/caip": "8.15.0",
     "@tanstack/react-query": "^5.75.5",
