feat: same graph in langchain and agentic-chat projects

--- a/apps/langchain/tsconfig.json
+++ b/apps/langchain/tsconfig.json
@@ -24,10 +24,7 @@
   "exclude": ["node_modules", "dist"],
   "references": [
     {
-      "path": "../../utils"
-    },
-    {
-      "path": "../../tools"
+      "path": "../../graph"
     }
   ]
 }
