--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@reown/appkit": "^1.0.0",
+    "@reown/appkit-adapter-wagmi": "^1.0.0",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,7 +36,8 @@
     "@shapeshiftoss/caip": "8.15.0",
     "@tanstack/react-query": "^5.75.5",
     "viem": "^2.7.9",
-    "wagmi": "^2.15.2"
+    "wagmi": "^2.15.3",
+    "@wagmi/core": "^2.17.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
