--- a/apps/agentic-chat/package.json
+++ b/apps/agentic-chat/package.json
@@ -37,6 +37,7 @@
     "@tanstack/react-query": "^5.75.5",
     "viem": "^2.7.9",
     "wagmi": "^2.15.3",
+    "use-stick-to-bottom": "^1.0.46",
     "@wagmi/core": "^2.17.2"
   },
   "devDependencies": {
